fix dates and subtitle

--- a/config.toml
+++ b/config.toml
@@ -13,7 +13,7 @@ pygmentsCodefencesGuessSyntax = true
 
 [Params]
 #  homeTitle = "Beautiful Hugo Theme" # Set a different text for the header on the home page
-  subtitle = "Build a beautiful and simple website in minutes"
+  subtitle = "a cloud engineer's tech blog"
   mainSections = ["post","posts"]
   logo = "img/avatar01.png" # Expecting square dimensions
   favicon = "img/favicon.ico"
